<resources>
    <string name="app_name">Mandiri e-Buss</string>
    <string name="login">Login</string>
    <string name="login_pick">Pick Login</string>
    <string name="register">Register</string>
    <string name="username_login">Email</string>
    <string name="type_here">Type here...</string>
    <string name="title">Title</string>
    <string name="wilayah">Wilayah</string>
    <string name="caption">Caption</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="note">Note</string>
    <string name="nip">NIP</string>
    <string name="divisi">Divisi</string>
    <string name="password_login">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_password">Confirm Password</string>
    <string name="confirm_password_login">Confirm Password</string>
    <string name="name">Nama</string>
    <string name="number_phone">Nomor Telepon</string>
    <string name="code_phone">Kode</string>
    <string name="forgot_password_login">Lupa Password?</string>
    <string name="not_have_account">Belum punya akun ? </string>
    <string name="have_account">Sudah punya akun ? </string>
    <string name="register_here">Daftar Disini</string>
    <string name="login_here">Login Disini</string>
    <string name="your_point">Your Points</string>
    <string name="look_new_quiz">Daily Quiz</string>
    <string name="look_point">Show Points</string>
    <string name="healthcare">Healthcare</string>
    <string name="fmcg">FMCG</string>
    <string name="mining">Mining</string>
    <string name="contractor">Contractor</string>
    <string name="oil_and_gas">Oil And Gas</string>
    <string name="farm">Farming</string>
    <string name="news">News</string>
    <string name="voting_design">Voting Design</string>
    <string name="view_more">View More</string>
    <string name="back">Kembali</string>
    <string name="detail_healthcare"></string>
    <string name="business_refrence">Business\nReference</string>
    <string name="outlook">Outlook</string>
    <string name="ubah_unit_kerja">Change Works Unit</string>
    <string name="ubah_profil">Change Profil</string>
    <string name="market_inteligence">Market\nIntelligence</string>
    <string name="ecosystem">Ecosystem</string>
    <string name="list_of_probing">List of\nProbing</string>
    <string name="credit_worthiness">Credit\nWorthiness</string>
    <string name="compliance">Internal\nResources</string>
    <string name="mandiri_updatge">Mandiri\nUpdate</string>
    <string name="credit_decisive_tool">Credit\nDecision Tool</string>
    <string name="input_forum">Input Forum</string>
    <string name="input_gambar">Input Gambar</string>
    <string name="edit_forum">Edit Forum</string>
    <string name="food_and_beverage">Food &amp; Beverage</string>
    <string name="non_food_and_beverage">Non Food &amp; Beverage</string>
    <string name="tobacco">Tobacco</string>
    <string name="executive">Executive</string>
    <string name="consultant">Consultant</string>
    <string name="user_agreement2">Dengan mengunduh, mengakses dan/atau menggunakan aplikasi e-Business Profile ini, berarti Anda telah setuju untuk terikat serta tunduk pada Syarat dan Ketentuan Penggunaan aplikasi ini
(selanjutnya disebut sebagai “Syarat”. Atau “Ketentuan Layanan”, atau “Syarat dan Ketentuan”. Jika
anda tidak menyetujui Syarat dan Ketentuan ini, maka Anda kami sarankan untuk berhenti
mengakses dan/atau menggunakan aplikasi e-Business Profile ini.
Anda dilarang untuk menyalahgunakan aplikasi ini dengan cara apapun dan juga tidak diizinkan
untuk menggunakan untuk kepentingan yang tidak diizinkan pihak developer maupun pihak Bank
Mandiri.
e-Business Profile berhak untuk melakukan revisi dan perubahan syarat dan ketentuan tanpa
terlebih dahulu mendapatkan persetujuan dari Anda. Perubahan dan pengembangan atas syarat dan
ketentuan secara berkala, karena penggunaan lanjutan Anda atas Aplikasi e-Business Profile akan
mengartikan bahwa anda menerima revisi atau pembaharuan apapun.</string>
    <string name="eBook">e-Book</string>
    <string name="regulations">Regulations</string>
    <string name="Newsletter">Newsletter</string>
    <string name="BusinessReview">Business\nReview</string>
    <string name="pdf_document">PDF Document</string>
    <string name="acts">Acts</string>
    <string name="government_regulations">Government Regulations</string>
    <string name="president_decree">Presidential Decree</string>
    <string name="health_minister_decree">Health Minister Regulations</string>
    <string name="healthcare_ecosystem_flow">Healthcare Ecosystem Flow</string>
    <string name="fmcg_ecosystem_flow">FMCG Ecosystem Flow</string>
    <string name="view">View</string>
    <string name="list_of_hospital">List of Hospital</string>
    <string name="distributor">Distributor</string>
    <string name="retail">Retail</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="players">Players</string>
    <string name="association">Association</string>
    <string name="manufacture">Manufacture</string>
    <string name="suppliers">Supplier</string>
    <string name="supporting_industries">Supporting Industries</string>
    <string name="hospital_association">Hospital Association</string>
    <string name="pharmaceutical_wholesaler">Pharmaceutical Wholesaler</string>
    <string name="health_insurance">Health Insurance</string>
    <string name="clinical_labolatory">Clinical Labolatory</string>
    <string name="medical_waste_management_service">Medical Waste Management Service</string>
    <string name="third_party_administrator">Third Party Administrator</string>
    <string name="medical_device_suppliers">Medical Device Suppliers</string>
    <string name="bpjs">BPJS</string>
    <string name="clinic">Clinic</string>
    <string name="hospital_equipment">Hospital Equipment</string>
    <string name="total_hospital">Total Hospital</string>
    <string name="total_bed">Total Bed</string>
    <string name="loreum_ipsum_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="loreum_ipsum"></string>
    <string name="creidt_worthiness">Credit Worthiness</string>
    <string name="hospital_operational_perfomance_indicator">Hospital Operational Perfomance Indicator</string>
    <string name="hospital_finance_indicator">Hospital Finance Indicator</string>
    <string name="hospital_requirement_ratio">Hospital Requirement Ratio</string>
    <string name="business_opportinity_for_bank">Business Opportunity for Bank</string>
    <string name="hospital_key_of_success">Hospital Key of Success</string>
    <string name="risk_and_mitigation">Risk &amp; Mitigation</string>
    <string name="parameters">Parameters</string>
    <string name="simulation">Simulation</string>
    <string name="result">Result</string>
    <string name="operational">Operational</string>
    <string name="financial">Financial</string>
    <string name="parameter">Parameter</string>
    <string name="key_of_success">Key Of Success</string>
    <string name="market_potetial">Market Potential</string>
    <string name="business_status">Business Status &amp; Prospects</string>
    <string name="business_proccess">Business Process</string>
    <string name="key_succes_factor">Key Succes Factor</string>
    <string name="newsletter">Newsletter</string>
    <string name="business_review">Business Review</string>
    <string name="players_in_coal_mining">Players In Coal Mining</string>
    <string name="players_in_nickel_mining">Supporting Players In Coal &amp; Nickel Minig</string>
    <string name="players_in_nickel_mining2">Players In Nickel Mining</string>
    <string name="benchmarking">Benchmarking</string>
    <string name="market_potential">Market Potential</string>
    <string name="legal_aspect_licence">Legal Aspect &amp; Licencing</string>
    <string name="operational_technical">Operational &amp; Technical</string>
    <string name="financial_aspect">Financial Aspects</string>
    <string name="management_key_person">Management &amp; Key Person</string>
    <string name="ownership_key_person">Ownership &amp; Key Person</string>
    <string name="management">Management</string>
    <string name="upstream">Upstream</string>
    <string name="downstream">Downstream</string>
    <string name="services">Services</string>
    <string name="players_in_construction">Players In Construction</string>
    <string name="book1">Book 1 Construction Company Directory</string>
    <string name="book2">Book 2 Construction Company Directory</string>
    <string name="players_supply_material">Players In Supply Material</string>
    <string name="construction_service_business">Construction Service Business Entity Data</string>
    <string name="supporting_players">Supporting Players</string>
    <string name="list_contract">List of Contract Companies</string>
    <string name="kks_eksplorasi">KKKS Exploration</string>
    <string name="kks_produksi">KKKS Production</string>
    <string name="kks_cbm">KKKS CBM</string>
    <string name="downstream_business_entity">Downstream Business Entity</string>
    <string name="downstream_business_proccess">Downstream Business Proccess</string>
    <string name="processing_business">Processing Business Entity</string>
    <string name="storage_business_entitty">Storage Business Entity status Fourth Quarter 2021</string>
    <string name="list_company">List of Supporting Companies</string>
    <string name="industrial_business">Industrial Business In 2018</string>
    <string name="non_construction_business">Non-Construction Business In 2018</string>
    <string name="construction_business">Construction Business in 2018</string>
    <string name="list_bbm">List of BBM and LPG Distributors</string>
    <string name="oil_and_gas_commercial">Oil and Gas Commercial Business Entity</string>
    <string name="oil_and_gas_transportation">Oil and Gas Transportation Business Entity</string>
    <string name="list_oil_and_gas_business_entities">List of Oil and Gas Business Entities for Petroleum/Fuel/Refined Products Trading Activities November 2021</string>
    <string name="list_oil_and_gas_business_entities_trading">List of Oil and Gas Business Entities for Gas Trading Activities April 2021</string>
    <string name="procurment_of_good">Procurement of Goods and Services</string>
    <string name="construction_service">Construction Services</string>
    <string name="bbm_and_lpg">List of BBM and LPG Distributors</string>
    <string name="pertamina_fuel">List of Pertamina Fuel Distributors</string>
    <string name="pertamina_lpg">List of Pertamina LPG Distributors</string>
    <string name="lpg_non_pertamina">List of Non Pertamina LPG Distributors</string>
    <string name="players_in_beef_cattle">Players In Beef Cattle Industry</string>
    <string name="players_in_polutry">Players In Poultry Business</string>
    <string name="players_in_supporting_business">Players In Supporting Business</string>
    <string name="ecosystem_industry">Ecosystem Industry</string>
    <string name="link_association_farmer">Member of Farming Association</string>
    <string name="directory_farming_company">Directory Farming Company</string>
    <string name="link_member_poultry">Member of Poultry Company</string>
    <string name="link_member_poultry_feed">Member of Poultry Feed Company</string>
    <string name="link_member_beef">Member of Meat Processing Industry</string>
    <string name="link_member_milk">Member of Dairy Company</string>
    <string name="link_member_fnb">Member of  Food and Beverage Entrepreneurs Throughout Indonesia</string>
    <string name="five_c_analysis">5C Analysis</string>
</resources>