<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ModuleActivity">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:background="@drawable/banner">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:id="@+id/linearBack">
                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/chevron_left"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/inter_extra_bold"
                        android:text="@string/back"
                        android:textSize="@dimen/text_extra_large"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/healthcare"
                    android:textSize="@dimen/header_text_small"
                    android:fontFamily="@font/inter_extra_bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_healthcare"
                    android:textSize="@dimen/text_extra_large"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="20dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:id="@+id/relativeBusinessRefrennce">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="15dp"
                            android:src="@drawable/business_refrence" />
                        <TextView
                            android:layout_centerInParent="true"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/business_refrence"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/inter"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_margin="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ecosystem"/>
                        <TextView
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ecosystem"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/inter"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/relativeListOfProbing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="15dp"
                            android:src="@drawable/list_of_propbiang" />
                        <TextView
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/list_of_probing"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/inter"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_margin="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/credit_worthiness" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/inter"
                            android:gravity="center"
                            android:text="@string/credit_worthiness"
                            android:textColor="@color/colorBlack" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_margin="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/compliance"/>
                        <TextView
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/compliance"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/inter"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_margin="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/credit_decision_tool"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:text="@string/credit_decisive_tool"
                            android:gravity="center"
                            android:textColor="@color/colorBlack"
                            android:fontFamily="@font/inter"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter"
                    android:text="@string/news"
                    android:textColor="@color/colorBlack"
                    android:textFontWeight="1"
                    android:textSize="@dimen/text_extra_large" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/inter_extra_bold"
                    android:gravity="right"
                    android:text="@string/view_more"
                    android:textColor="@color/colorPrimary"
                    android:textFontWeight="1"
                    android:textSize="@dimen/text_extra_large" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="400dp">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>