<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.github.barteksc.pdfviewer.PDFView
                        android:id="@+id/ivEcosystem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="50dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true">
                        <TextView
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/healthcare_ecosystem_flow"
                            android:textColor="@color/colorBlack"
                            android:gravity="center|left"
                            android:fontFamily="@font/inter"
                            android:id="@+id/tvName"/>
                        <TextView
                            android:layout_weight="3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/view"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/inter_extra_bold"
                            android:gravity="center"
                            android:id="@+id/tvView"/>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_regular"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:id="@+id/cardListOfHospital">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|left"
                    android:padding="10dp">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="@dimen/icon_regular"
                        android:layout_height="@dimen/icon_regular"
                        android:src="@drawable/list_of_hospital"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/list_of_hospital"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/inter"
                        android:textSize="@dimen/header_text_small"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_regular"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:id="@+id/cardSupportingINdustries">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|left"
                    android:padding="10dp">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="@dimen/icon_regular"
                        android:layout_height="@dimen/icon_regular"
                        android:src="@drawable/supporting_industries"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supporting_industries"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/inter"
                        android:textSize="@dimen/header_text_small"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/box_regular"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:id="@+id/cardHospitalAssociation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center|left"
                    android:padding="10dp">
                    <ImageView
                        android:layout_margin="10dp"
                        android:layout_width="@dimen/icon_regular"
                        android:layout_height="@dimen/icon_regular"
                        android:src="@drawable/hospital_association"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital_association"
                        android:textColor="@color/colorPrimary"
                        android:fontFamily="@font/inter"
                        android:textSize="@dimen/header_text_small"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>